<resources>
    <string name="app_name">SNU 민상렬홀</string>

    <string name="snucse_id_label">SNUCSE 아이디</string>
    <string name="register">가입신청</string>
    <string name="password_label">비밀번호</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="login">로그인</string>

    <string name="popup_action">위 내용을 숙지했습니다.</string>

    <string name="start_time_label">사용 시작 시간</string>
    <string name="end_time_label">사용 완료 시간</string>
    <string name="time_range">%1$s ~ %2$s</string>

    <string name="time_select_help">*30분 단위로 예약할 수 있습니다.</string>
    <string name="colon">:</string>
    <string name="hour">시</string>
    <string name="minute">분</string>

    <string name="select_time">예약하기</string>
    <string name="select_seat">좌석 선택하기</string>

    <string name="time_format">%1$02d</string>

    <string name="taken_seat">예약된 좌석</string>
    <string name="disabled_seat">사용불가</string>
    <string name="non_occupied_seat">예약 가능</string>

    <string name="ok">확인</string>
    <string name="cancel">취소</string>

    <string name="reservation_label">나의 예약</string>
    <string name="reservation_cancel">취소하기</string>
    <string name="reservation_cancel_alert">정말 예약을 취소하시겠습니까?</string>
    <string name="reservation_elongate">예약시간 연장하기</string>

    <string name="reservation_expiration_5_minutes_before_title">예약이 곧 만료됩니다!</string>
    <string name="reservation_expiration_5_minutes_before_body">예약 만료까지 5분 남았습니다. 시간이 부족하면 예약을 연장해주세요.</string>
    <string name="reservation_expire_title">예약이 만료됐습니다.</string>
    <string name="reservation_expire_body">민상렬홀을 사용해주셔서 감사합니다.</string>

    <string name="contact_title">문제 발생시 연락처</string>
    <string name="contact_number">880&#8211;1528</string>

    <string name="wifi_title">Wi-Fi</string>
    <string name="wifi_body">%1$s (비번: %2$s)</string>

    <string name="logout">로그아웃</string>

    <string name="error_unknown">알 수 없는 오류입니다. 다시 시도해주세요.</string>
    <string name="error_network">네트워크 연결을 확인해주세요.</string>
    <string name="error_missing_token">로그인을 다시 시도해주세요.</string>
    <string name="error_forbidden">권한이 없습니다.</string>
    <string name="error_unauthorized">인증에 실패했습니다.</string>
    <string name="error_server_error">서버 에러입니다. 잠시 후 다시 시도해주세요.</string>
    <string name="error_time_invalid">올바르지 않은 시간입니다.</string>
    <string name="error_time_too_early">현재 시간보다 이른 시간으로 예약 할 수 없습니다.</string>
    <string name="error_student_unavailable">경고 조치로 인해 예약이 불가능합니다.</string>
    <string name="error_student_unauthorized">권한이 없습니다.</string>
    <string name="error_reservation_not_found">없는 예약입니다.</string>
    <string name="error_today_reservation_not_found">오늘 예약이 없습니다.</string>
    <string name="error_reservation_number_exceed">이미 오늘 좌석을 예약하셨습니다.</string>
    <string name="error_reservation_time_invalid">예약이 불가능한 시간입니다.</string>
    <string name="error_seat_not_found">없는 좌석입니다.</string>
    <string name="error_seat_unavailable">해당 좌석 이용이 불가능합니다.</string>
    <string name="error_password_not_valid">비밀번호가 틀렸습니다.</string>
    <string name="error_token_error">로그인을 다시 시도해주세요.</string>
    <string name="error_login_failure">로그인을 실패했습니다.</string>
</resources>
