<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/time_container"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >

    <ImageButton
        android:id="@+id/hour_up_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        android:src="@drawable/up"
        app:layout_constraintEnd_toEndOf="@+id/hour_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/hour_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/hour_up_button"
        app:layout_constraintStart_toStartOf="@id/hour_up_button"
        app:layout_constraintTop_toBottomOf="@id/hour_up_button"
        >

        <TextView
            android:id="@+id/hour_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColor="@color/text"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="15"
            />

        <TextView
            android:id="@+id/hour_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hour"
            android:textColor="@color/text"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/hour_text"
            app:layout_constraintStart_toStartOf="@id/hour_text"
            app:layout_constraintTop_toBottomOf="@+id/hour_text"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/hour_down_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        android:src="@drawable/down"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/hour_container"
        app:layout_constraintStart_toStartOf="@+id/hour_container"
        app:layout_constraintTop_toBottomOf="@+id/hour_container"
        />

    <TextView
        android:id="@+id/colon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="33dp"
        android:text="@string/colon"
        android:textColor="@color/text"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/minute_container"
        app:layout_constraintStart_toEndOf="@+id/hour_container"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageButton
        android:id="@+id/minute_up_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        android:src="@drawable/up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/minute_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/minute_up_button"
        app:layout_constraintStart_toStartOf="@id/minute_up_button"
        app:layout_constraintTop_toBottomOf="@+id/minute_up_button"
        >

        <TextView
            android:id="@+id/minute_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColor="@color/text"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="30"
            />

        <TextView
            android:id="@+id/minute_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minute"
            android:textColor="@color/text"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/minute_text"
            app:layout_constraintStart_toStartOf="@id/minute_text"
            app:layout_constraintTop_toBottomOf="@+id/minute_text"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/minute_down_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        android:src="@drawable/down"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/minute_container"
        app:layout_constraintStart_toStartOf="@+id/minute_container"
        app:layout_constraintTop_toBottomOf="@+id/minute_container"
        />

</merge>
